[gd_scene load_steps=2 format=3 uid="uid://dkne4hft43a8"]

[ext_resource type="Script" path="res://ui/menus/settings.gd" id="1_6l0lx"]

[node name="Settings" type="PanelContainer"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.012
anchor_right = 0.778
anchor_bottom = 1.0
offset_left = -3.744
offset_top = 641.224
offset_right = 3.74402
offset_bottom = 649.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6l0lx")

[node name="Title" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = -24

[node name="Label" type="Label" parent="Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 48
theme_override_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(576, 536)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Video"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="WindowMode" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowMode"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Window Mode:        "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowMode"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"ExtraSmallButton"
item_count = 5
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Minimized"
popup/item_1/id = 1
popup/item_2/text = "Maximized"
popup/item_2/id = 2
popup/item_3/text = "Windowed Fullscreen"
popup/item_3/id = 3
popup/item_4/text = "Fullscreen"
popup/item_4/id = 4

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Resolution:             "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/Resolution"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"ExtraSmallButton"
item_count = 9
popup/item_0/text = "648×648 (1:1)"
popup/item_0/id = 0
popup/item_1/text = "640×480 (4:3)"
popup/item_1/id = 1
popup/item_2/text = "720×480 (3:2)"
popup/item_2/id = 2
popup/item_3/text = "800×600 (4:3)"
popup/item_3/id = 3
popup/item_4/text = "1152×648 (16:9)"
popup/item_4/id = 4
popup/item_5/text = "1280×720 (16:9)"
popup/item_5/id = 5
popup/item_6/text = "1280×800 (16:10)"
popup/item_6/id = 6
popup/item_7/text = "1680×720 (21:9)"
popup/item_7/id = 7
popup/item_8/text = "2560x1080 (21:9)"
popup/item_8/id = 8

[node name="WindowStretch" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowStretch"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Stretch Mode:         "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowStretch"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"ExtraSmallButton"
item_count = 3
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Canvas Items (2D)"
popup/item_1/id = 1
popup/item_2/text = "Viewport"
popup/item_2/id = 2

[node name="WindowStretchAspect" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowStretchAspect"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Stretch Aspect:       "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowStretchAspect"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"ExtraSmallButton"
item_count = 5
popup/item_0/text = "Ignore"
popup/item_0/id = 0
popup/item_1/text = "Keep"
popup/item_1/id = 1
popup/item_2/text = "Keep Width"
popup/item_2/id = 2
popup/item_3/text = "Keep Height"
popup/item_3/id = 3
popup/item_4/text = "Expand"
popup/item_4/id = 4

[node name="WindowScaleFactor" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowScaleFactor"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Scale Factor:           "

[node name="HSlider" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowScaleFactor"]
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 500.0
value = 100.0

[node name="Val" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowScaleFactor"]
layout_mode = 2
text = "100%"

[node name="WindowScaleMode" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowScaleMode"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Scale Mode:             "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/WindowScaleMode"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"ExtraSmallButton"
item_count = 2
popup/item_0/text = "Fractional"
popup/item_0/id = 0
popup/item_1/text = "Integer"
popup/item_1/id = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 48

[node name="Apply" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"SmallButton"
theme_override_font_sizes/font_size = 32
text = "Apply"

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"SmallButton"
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="EmergencyRevert" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Warning" type="Label" parent="EmergencyRevert"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.9999
offset_top = 16.0
offset_right = 86.0001
offset_bottom = 32.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Automatically reverting in:"

[node name="Timer" type="Label" parent="EmergencyRevert"]
layout_mode = 0
offset_top = 22.0
offset_right = 256.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="EmergencyRevert"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -40.0
offset_right = 84.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="EmergencyRevert/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="KeepChanges" type="Button" parent="EmergencyRevert/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"ExtraSmallButton"
theme_override_font_sizes/font_size = 16
text = "Keep changes"

[node name="RevertNow" type="Button" parent="EmergencyRevert/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"ExtraSmallButton"
theme_override_font_sizes/font_size = 16
text = "Revert now"

[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/WindowScaleFactor/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="EmergencyRevert/MarginContainer/HBoxContainer/KeepChanges" to="." method="_on_keep_changes_pressed"]
[connection signal="pressed" from="EmergencyRevert/MarginContainer/HBoxContainer/RevertNow" to="." method="_on_revert_now_pressed"]
